-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.5.1
-
None
-
Windows 7
-
91848f47559db244c9981e97967369e60425e7e6
I have a global object which I dragged to the L&E pane. It expands and works fine, but when I try to edit the root object (change the evaluated expression) I can't. F2 does nothing and double-clicking on it just expands it.
This only happens with coredump. Normal debugging works as expected.
| For Gerrit Dashboard: QTCREATORBUG-15001 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 124978,2 | Debugger: Make watchers editable in coredump | 3.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |