Debugger: Make watchers editable in coredump

Task-number: QTCREATORBUG-15001
Change-Id: Icba8175e2f3ca0ed07815fb063dec660c722231d
Reviewed-by: hjk <hjk@theqtcompany.com>